增加用户注册登录api，增加jwt签名和校验
